--- a/app/src/main/res/layout/fragment_gameback.xml
+++ b/app/src/main/res/layout/fragment_gameback.xml
@@ -4,11 +4,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/result1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TEST" />
+        <ListView
+            android:id="@+id/listView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:divider="#666666"
+            android:dividerHeight="1dp" />
 
 
 </LinearLayout>
