--- a/app/src/main/res/layout/fragment_gameback.xml
+++ b/app/src/main/res/layout/fragment_gameback.xml
@@ -8,8 +8,6 @@
             android:id="@+id/listView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:divider="#666666"
-            android:dividerHeight="1dp" />
-
-
+            android:divider="@color/drk_gray"
+            android:dividerHeight="@dimen/oneDip" />
 </LinearLayout>
