--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="off_black">#313639</color>
+    <color name="gray">#cfcfcf</color>
+    <color name="drk_gray">#666666</color>
+    <color name="black">#000000</color>
+
+
 </resources>
