--- a/app/src/main/res/layout/list_cell.xml
+++ b/app/src/main/res/layout/list_cell.xml
@@ -1,32 +1,48 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/main_ll"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
     android:paddingStart="@dimen/medium_spacing"
     android:paddingEnd="@dimen/medium_spacing">
 
-    <TextView
-        android:id="@+id/txtcola"
-        android:layout_width="0dp"
+    <RelativeLayout
+        android:id="@+id/team_rl"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="5"
+        android:layout_width="0dp"
         android:paddingTop="@dimen/medium_spacing"
         android:paddingBottom="@dimen/medium_spacing"
-        android:textColor="@color/off_black" />
-    <View
-        android:layout_height="match_parent"
-        android:layout_width="@dimen/oneDip"
-        android:background="@color/drk_gray"/>
+        android:layout_gravity="center_vertical">
 
+        <ImageView
+            android:id="@+id/imgcol"
+            android:layout_width="@dimen/offset_medium_spacing"
+            android:layout_height="@dimen/offset_medium_spacing"/>
+
+        <TextView
+            android:id="@+id/txtcola"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/imgcol"
+            android:textColor="@color/off_black" />
+    </RelativeLayout>
+    <View
+        android:id="@+id/chart_v"
+        android:layout_width="@dimen/oneDip"
+        android:layout_height="match_parent"
+        android:background="@color/drk_gray" />
     <TextView
         android:id="@+id/txtcolb"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="3"
+        android:paddingLeft="@dimen/small_spacing"
         android:paddingTop="@dimen/medium_spacing"
         android:paddingBottom="@dimen/medium_spacing"
-        android:textColor="@color/off_black"
-        android:paddingLeft="@dimen/small_spacing" />
+        android:textColor="@color/off_black" />
+
+
 
 
 </LinearLayout>
