--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,5 +8,7 @@
     <dimen name="xsmall_spacing">4dp</dimen>
     <dimen name="small_spacing">8dp</dimen>
     <dimen name="medium_spacing">16dp</dimen>
+    <dimen name="offset_medium_spacing">20dp</dimen>
     <dimen name="large_spacing">32dp</dimen>
+    <dimen name="xlarge_spacing">64dp</dimen>
 </resources>
